--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <title>Ramires</title>
-  </head>
-  <body>
-  
-  <body>
+</head>
+
+<body>
+    <section>
+        <img src="ramires.jpeg" alt="Foto Ramires">
+        <h1>Ramires de Sousa</h1>
+        <h3>Meu nome é Ramires de Sousa Leal, tenho 19 anos.
+            <br> Acho que eu seja um pouco extrovertida, uma boa amiga, ajudo quem precisa de mim. Trabalho em loja de informática, gosto de sair, me divertir. Se tudo der certo serei militar, caso não, irei vender minhas artes na praia, mas, para isso
+            tenho que descobrir quais artes, rsrs.</h3>
+    </section>
+
+    <body>
+
 </html>
