--- a/index.html
+++ b/index.html
@@ -3,27 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Ramires</title>
-    <style>
-        img {
-            weight: 150px;
-            height: 350px;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
-    <section>
-        <center>
-            <img src="ramires.jpeg" alt="Foto Ramires">
-            <h1>Ramires de Sousa</h1>
+    <main>
+        <section class="info">
+            <img class="imagem" src="img/ramires.jpeg" alt="Foto Jesiel">
+            <h1>Ramires Sousa</h1>
+            <p>Técnica em Informática</p>
+            <p>@ramiressl</p>
+        </section>
+        <section class="curriculo">
+            <h3>Descrição</h3>
+            acho que eu seja um pouco extrovertida, uma boa amiga, ajudo quem precisa de mim.
+            <br>Trabalho em loja de informática, gosto de sair, me divertir.
+            <br>Se tudo der certo serei militar, caso não, irei vender minhas artes na praia, mas, para isso tenho que descobrir quais artes, rsrs.
             <h4>Idade: 19 anos</h4>
-            <h4>Sobre mim: acho que eu seja um pouco extrovertida, uma boa amiga, ajudo quem precisa de mim.
-                <br>Trabalho em loja de informática, gosto de sair, me divertir.
-                <br>Se tudo der certo serei militar, caso não, irei vender minhas artes na praia, mas, para isso tenho que descobrir quais artes, rsrs.</h4>
-            <h5>Instagram: @ramiressl</h5>
-        </center>
-    </section>
+
+            <h3>Formação</h3>
+            <ul>
+                <li>Ensino Médio Integrado ao Técnico em Informática</li>
+            </ul>
+
+            <h3>Experiência</h3>
+            <ul>
+                <li>Assistência Técnica de Eletrônicos</li>
+                <li>Formatação de aparelhos</li>
+            </ul>
+        </section>
+        <footer>
+            2021 - @ramiressl
+        </footer>
+    </main>
 
     <body>
 
